fix(accordion): support svg in dark mode

--- a/src/sass/accordion/accordion.scss
+++ b/src/sass/accordion/accordion.scss
@@ -49,7 +49,7 @@ ul.accordion--large summary.details__summary {
 
 ul.accordion details svg.details__expand,
 ul.accordion details[open] svg.details__collapse {
-    display: block;
+    display: inline-block;
 }
 
 ul.accordion details[open] svg.details__expand,
